--- a/Public/filter-Manager.html
+++ b/Public/filter-Manager.html
@@ -72,20 +72,14 @@
 									<ul class="fh5co-sub-menu">
 										<li><a href="all-Manager.html">All</a></li>
 										<li><a href="filter-Manager.html">Filter</a></li>
+										<li><a href="addA-Manager.html">Add</a></li>
+										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
 							</li>
 							<li><a href="users-Manager.html">Users</a></li>
+							<li><a href="addC-Manager.html">Customer</a></li>
 							<li><a href="blog-Manager.html">Blog</a></li>
-							<li>
-								<a>Activities</a>
-									<ul class="fh5co-sub-menu">
-										<li><a href="addP-Manager.html">Add Property</a></li>
-										<li><a href="updateP-Manager.html">Update Property</a></li>
-										<li><a href="addC-Manager.html">Add a Customer</a></li>
-										<li><a href="updateC-Manager.html">Update Customer</a></li>
-										<li><a href="addD-Manager.html">Close A Deal</a></li>
-									</ul>
-							</li>
+							<li><a href="addD-Manager.html">Deal</a></li>
 							<li>
 								<a>Meetings</a>
 									<ul class="fh5co-sub-menu">
@@ -107,7 +101,7 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                             <div class="slider-text-inner">
-                                    <h2 class="heading-title">Our Properties</h2>
+                                    <h2 class="heading-title">Our Assets</h2>
                                     <p class="fh5co-lead">Coming Soon <i class="icon-heart3"></i>  </p>
                         </div>
                         </div>
@@ -118,12 +112,12 @@
         </aside>
 
 
-    <title>Search Properties</title>
+    <title>Search Assetss</title>
 
     <div id="fh5co-search-map">
         <div class="search-property">
             <div class="s-holder">
-                <h2>Search Properties</h2>
+                <h2>Search Assets</h2>
                 <div class="row">
                     <div class="col-xxs-12 col-xs-12">
                         <section>
