--- a/Public/all-Manager.html
+++ b/Public/all-Manager.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="no-js">
 <head>
     <meta charset="utf-8">
@@ -95,7 +96,7 @@
 .pink-stripe {
     position: absolute;
     top: 50%;
-    right: -20px; /* Width of the stripe */
+    right: 110px; /* Width of the stripe */
     transform: translateY(-50%);
     background-color: rgb(230, 83, 107); /* Pink color */
     color: white;
@@ -131,20 +132,14 @@
                             <ul class="fh5co-sub-menu">
                                 <li><a href="all-Manager.html">All</a></li>
                                 <li><a href="filter-Manager.html">Filter</a></li>
+                                <li><a href="addA-Manager.html">Add</a></li>
+                                <li><a href="updateA-Manager.html">Update</a></li>
                             </ul>
                     </li>
                     <li><a href="users-Manager.html">Users</a></li>
+                    <li><a href="addC-Manager.html">Customer</a></li>
                     <li><a href="blog-Manager.html">Blog</a></li>
-                    <li>
-                        <a>Activities</a>
-                            <ul class="fh5co-sub-menu">
-                                <li><a href="addP-Manager.html">Add Property</a></li>
-                                <li><a href="updateP-Manager.html">Update Property</a></li>
-                                <li><a href="addC-Manager.html">Add a Customer</a></li>
-                                <li><a href="updateC-Manager.html">Update Customer</a></li>
-                                <li><a href="addD-Manager.html">Close A Deal</a></li>
-                            </ul>
-                    </li>
+                    <li><a href="addD-Manager.html">Deal</a></li>
                     <li>
                         <a>Meetings</a>
                             <ul class="fh5co-sub-menu">
@@ -167,7 +162,7 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2 class="heading-title">All our Properties</h2>
+                                    <h2 class="heading-title">All our Assets</h2>
                                     <p class="fh5co-lead">Coming Soon <i class="icon-heart3"></i>  </p>
                                 </div>
                             </div>
@@ -183,7 +178,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-                    <h3>Filter Properties</h3>
+                    <h3>Filter Assets</h3>
                     <input type="text" id="property-id-input" placeholder="Enter Property ID">
                     <button onclick="filterProperties()">Filter</button>
                 </div>
