--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -52,16 +52,24 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
+
 	<style>
         .card {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(320px, 10fr));
-            gap: 20px;
+            gap: 50px;
+			padding: 50px;
+			
+
         }
 
         .feedback-item {
             background-color: #ffffff;
-            border-radius: 10px;
+            border-radius: 20px;
             padding: 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease-in-out;
@@ -107,7 +115,8 @@
         .feedback-item .asset-details {
             margin-top: 10px;
         }
-		
+
+
     </style>
 
 
@@ -129,20 +138,14 @@
 									<ul class="fh5co-sub-menu">
 										<li><a href="all-Manager.html">All</a></li>
 										<li><a href="filter-Manager.html">Filter</a></li>
+										<li><a href="addA-Manager.html">Add</a></li>
+										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
 							</li>
 							<li><a href="users-Manager.html">Users</a></li>
+							<li><a href="addC-Manager.html">Customer</a></li>
 							<li><a href="blog-Manager.html">Blog</a></li>
-							<li>
-								<a>Activities</a>
-									<ul class="fh5co-sub-menu">
-										<li><a href="addP-Manager.html">Add Property</a></li>
-										<li><a href="updateP-Manager.html">Update Property</a></li>
-										<li><a href="addC-Manager.html">Add a Customer</a></li>
-										<li><a href="updateC-Manager.html">Update Customer</a></li>
-										<li><a href="addD-Manager.html">Close A Deal</a></li>
-									</ul>
-							</li>
+							<li><a href="addD-Manager.html">Deal</a></li>
 							<li>
 								<a>Meetings</a>
 									<ul class="fh5co-sub-menu">
@@ -213,7 +216,7 @@
 	<!-- fh5co-blog-section -->
 
 		<!-- fh5co-blog-section -->
-
+		</div>
 		<footer>
 			<div id="footer">
 				<div class="container">
