--- a/Public/meetingV-Manager.html
+++ b/Public/meetingV-Manager.html
@@ -191,29 +191,23 @@
                         <li class="active"><a href="HomeManager.html">Home</a></li>
                         <li>
                             <a>Assets</a>
-                            <ul class="fh5co-sub-menu">
-                                <li><a href="all-Manager.html">All</a></li>
-                                <li><a href="filter-Manager.html">Filter</a></li>
-                            </ul>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="all-Manager.html">All</a></li>
+                                    <li><a href="filter-Manager.html">Filter</a></li>
+                                    <li><a href="addA-Manager.html">Add</a></li>
+                                    <li><a href="updateA-Manager.html">Update</a></li>
+                                </ul>
                         </li>
                         <li><a href="users-Manager.html">Users</a></li>
+                        <li><a href="addC-Manager.html">Customer</a></li>
                         <li><a href="blog-Manager.html">Blog</a></li>
-                        <li>
-                            <a>Activities</a>
-                            <ul class="fh5co-sub-menu">
-                                <li><a href="addP-Manager.html">Add Property</a></li>
-                                <li><a href="updateP-Manager.html">Update Property</a></li>
-                                <li><a href="addC-Manager.html">Add a Customer</a></li>
-                                <li><a href="updateC-Manager.html">Update Customer</a></li>
-                                <li><a href="addD-Manager.html">Close A Deal</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="addD-Manager.html">Deal</a></li>
                         <li>
                             <a>Meetings</a>
-                            <ul class="fh5co-sub-menu">
-                                <li><a href="meetingA-Manager.html">Add</a></li>
-                                <li><a href="meetingV-Manager.html">View</a></li>
-                            </ul>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="meetingA-Manager.html">Add</a></li>
+                                    <li><a href="meetingV-Manager.html">View</a></li>
+                                </ul>
                         </li>
                     </ul>
                 </nav>
