--- a/Public/meeting-Customer.html
+++ b/Public/meeting-Customer.html
@@ -260,20 +260,24 @@
     })
     .catch(error => console.error('Error fetching assets:', error));
 });
+
+
 document.addEventListener("DOMContentLoaded", function() {
-    fetch('/Partners') // שינוי לנתיב המתאים לקבלת השותפים מהשרת
-        .then(response => response.json())
-        .then(data => {
-            const partnerSelect = document.getElementById('partner');
-            data.forEach(partner => {
-                const option = document.createElement('option');
-                option.value = partner.id; // ערך הערך של השותף
-                option.textContent = partner.UserName; // הטקסט המוצג למשתמש
-                partnerSelect.appendChild(option);
-            });
-        })
-        .catch(error => console.error('Error fetching partners:', error));
+  // Fetch assets data from server and display them
+  fetch('/Partners')
+    .then(response => response.json())
+    .then(data => {
+        const assetSelect = document.getElementById('partner');
+        data.forEach(partner => {
+            const option = document.createElement('option');
+            option.value = partner.UserName;;
+            option.textContent = option.value;
+            assetSelect.appendChild(option);
+        });
+    })
+    .catch(error => console.error('Error fetching partners:', error));
 });
+
 
         document.addEventListener("DOMContentLoaded", function() {
             var form = document.getElementById("meetingForm");
