--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -58,7 +58,7 @@
 
 </head>
 <style>
-	      .card {
+        .card {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(320px, 10fr));
             gap: 50px;
@@ -73,6 +73,8 @@
             padding: 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease-in-out;
+			align-items: center; /* כדי למרכז את התוכן אופקית */
+    text-align: center; /* כדי למרכז את התוכן אנכית */
         }
 
         .feedback-item:hover {
@@ -97,7 +99,10 @@
             color: #666666;
             font-family: 'calibri';
 			margin-left: auto;
+			align-items: center; /* כדי למרכז את התוכן אופקית */
+    text-align: center; /* כדי למרכז את התוכן אנכית */
         }
+
 
         .feedback-item .date {
             font-weight: bold;
@@ -115,6 +120,54 @@
         .feedback-item .asset-details {
             margin-top: 10px;
         }
+
+		.star-rating {
+    display: inline-block;
+    unicode-bidi: bidi-override;
+    color: #ffcc00; /* צבע הכוכבים */
+    font-size: 20px; /* גודל הכוכבים */
+    height: 1em;
+    width: auto;
+    margin-left: 10px; /* מרווח משמאל */
+    position: relative;
+    padding: 0;
+}
+
+.star-rating::before {
+    content: "\2605"; /* תו של כוכב */
+    position: absolute;
+    opacity: 0; /* החלק הבא ישנה את השקיפות כדי להציג את מספר הכוכבים */
+}
+
+.star-rating:hover::before,
+.star-rating:hover~.star-rating::before {
+    opacity: 1;
+    color: #ffcc00; /* צבע הכוכבים במצב השקיפות */
+}
+
+.feedback-item .rating {
+    display: inline-block;
+    font-size: 16px; /* גודל הטקסט של מספר הכוכבים */
+    vertical-align: middle;
+}
+
+.star-rating {
+    display: inline-block;
+    color: #ffcc00; /* צבע הכוכבים */
+    font-size: 20px; /* גודל הכוכבים */
+    vertical-align: middle;
+	text-align: center; /* לישור כוכבים למרכז */
+    width: 100%; /* לקחת את כל הרוחב של המרכז */
+}
+
+.star-rating::before {
+    content: "\f005"; /* תו של כוכב בגופן Font Awesome */
+    font-family: 'Font Awesome'; /* שם הגופן */
+    font-weight: normal;
+    font-style: normal;
+    margin-right: 5px; /* מרווח מימין בין האייקון למספר */
+    display: inline-block;/* מרווח מימין בין האייקון למספר */
+}
 
 </style>
 <body>
@@ -353,43 +406,47 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 
 
-	   document.addEventListener('DOMContentLoaded', async () => {
-            try {
-                const response = await fetch('/feedback');
-                if (!response.ok) {
-                    throw new Error('Failed to fetch feedback data');
-                }
-                const data = await response.json();
+document.addEventListener('DOMContentLoaded', async () => {
+    try {
+        const response = await fetch('/feedback');
+        if (!response.ok) {
+            throw new Error('Failed to fetch feedback data');
+        }
+        const data = await response.json();
 
-                const feedbackList = document.getElementById('feedbackList');
-                if (!feedbackList) {
-                    throw new Error('Element with ID "feedbackList" not found');
-                }
+        const feedbackList = document.getElementById('feedbackList');
+        if (!feedbackList) {
+            throw new Error('Element with ID "feedbackList" not found');
+        }
 
-                feedbackList.innerHTML = '';
+        feedbackList.innerHTML = '';
 
-                data.forEach((feedback) => {
-                    const card = document.createElement('div');
-                    card.classList.add('feedback-card');
+        data.forEach((feedback) => {
+            const card = document.createElement('div');
+            card.classList.add('feedback-card');
 
-					card.innerHTML = `
-						<h2 <i class="icon-bubble2"> <i class="comment"> ${feedback.Name}</h2>
-                        <p>Date Posted: ${feedback.Date} </p>
-                        <p>${feedback.FeedbackDesc}</p>
-                        <p>Rating: ${feedback.rating} stars</p>
-                    `; 
+            card.innerHTML = `
+                <h2><i class="icon-bubble2"></i> <i class="comment">${feedback.Name}</i></h2> <br>
+                <p>Date Posted: ${feedback.Date} </p>
+                <p>${feedback.FeedbackDesc}</p>
+                <p class="rating star-rating"></p>
+            `;
 
-                    feedbackList.appendChild(card);
-                });
-				
-            } catch (error) {
-                console.error('Error fetching feedback:', error.message);
+            const ratingElement = card.querySelector('.rating.star-rating');
+            if (ratingElement) {
+                const stars = '\u2605'; // אייקון של כוכב ב-Unicode
+                ratingElement.textContent = stars.repeat(feedback.rating); // משנה את התוכן למספר המציין כמות כוכבים
             }
+
+            feedbackList.appendChild(card);
         });
+    } catch (error) {
+        console.error('Error fetching feedback:', error.message);
+    }
+});
 
 
-
-		document.addEventListener("DOMContentLoaded", function () {
+document.addEventListener("DOMContentLoaded", function () {
     var form = document.getElementById("feedbackForm");
     var successMessage = document.getElementById("successMessage");
     var errorMessage = document.getElementById("errorMessage");
@@ -416,6 +473,11 @@ document.addEventListener("DOMContentLoaded", function () {
                 successMessage.style.display = "block";
                 errorMessage.style.display = "none";
                 form.reset();
+                
+                // Load the page automatically after adding feedback
+                setTimeout(function () {
+                    window.location.reload();
+                }, 3000); // זמן המתנה במילישניות (בדוגמה זו - 3 שניות)
             } else {
                 // Display error message
                 errorMessage.style.display = "block";
@@ -430,6 +492,7 @@ document.addEventListener("DOMContentLoaded", function () {
         });
     });
 });
+
 
 
 </script>
