--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -310,7 +310,7 @@
                 			Feedback submitted successfully!
 						</div>
 						<div id="errorMessage" style="display: none;" class="alert alert-danger" role="alert">
-							Failed to add feedback. Please try again later.
+							Failed to add feedback. Only a customer who has made a deal may add feedback.
 						</div>
 						</div>
 						
