--- a/Public/meetingA-Manager.html
+++ b/Public/meetingA-Manager.html
@@ -108,7 +108,14 @@
 						</div>
 						<div class="form-group">
 							<label for="time">Time:</label>
-							<input type="time" class="form-control" id="time" name="time" required>
+							<select class="form-control" id="time" name="time" required>
+								<option value="">Select Time</option>
+								<option value="09:00">09:00</option>
+								<option value="12:00">11:00</option>
+								<option value="15:00">15:00</option>
+								<option value="17:00">17:00</option>
+								<option value="19:00">19:00</option>
+							</select>
 						</div>
 						<div class="form-group">
 							<label for="location">Location:</label>
@@ -205,39 +212,34 @@
 
     <script>
     document.addEventListener("DOMContentLoaded", function() {
-        fetch('/Assets')
+    const username = sessionStorage.getItem('username');
+    const partnerField = document.getElementById('partner');
+    if (username) {
+        partnerField.value = username;
+    } else {
+        console.error('Username not found in session storage');
+    }
+
+    fetch('/Assets')
         .then(response => response.json())
         .then(data => {
             const assetSelect = document.getElementById('assetSelect');
             data.forEach(asset => {
                 const option = document.createElement('option');
-                option.value = 'Street: '+asset.AssetStreet +' , Street Number: ' +asset.AssetStreetNumber +', Price: ' + asset.AssetPrice + ', Type: ' + asset.AssetType;
-                option.textContent = option.value;
+                option.value = asset.AssetID; // שינוי כאן לשדה המתאים מהאובייקט asset
+                option.textContent = `Street: ${asset.AssetStreet}, Street Number: ${asset.AssetStreetNumber}, Price: ${asset.AssetPrice}, Type: ${asset.AssetType}`;
                 assetSelect.appendChild(option);
             });
         })
         .catch(error => console.error('Error fetching assets:', error));
-});
-
-//
-document.addEventListener("DOMContentLoaded", function() {
-    const username = sessionStorage.getItem('username');
-    console.log(username);
-    const partnerField = document.getElementById('partner');
-    console.log(partnerField);
-    if (username) {
-            partnerField.value = username;
-            console.log(partnerField);
-        }
-     else {
-        console.error('Username not found in session storage');
-    }
 
     var form = document.getElementById("meetingForm");
     form.addEventListener("submit", function(event) {
         event.preventDefault();
 
-        var partner = partnerField.value; 
+        var partnerField = document.getElementById("partner"); // תיקון כאן ל-ID המתאים
+        var partner = partnerField.value;
+
         var customerID = document.getElementById("customerID").value;
 
         fetch(`/checkCustomerExists?customerID=${customerID}`)
@@ -276,11 +278,9 @@ document.addEventListener("DOMContentLoaded", function() {
             data[key] = value;
         });
 
-
         data["partner"] = partner;
         data["selectedAssets"] = selectedAssets;
         data["meetingType"] = meetingType;
-
 
         fetch("/addMeeting", {
             method: "POST",
