--- a/Public/meeting-Customer.html
+++ b/Public/meeting-Customer.html
@@ -169,7 +169,7 @@
 							  <!-- Options will be dynamically populated here -->
 							</select>
 						  </div>
-						<button type="submit" class="btn btn-primary" id="sub">Submit</button>
+						<button type="submit" class="btn btn-primary" id="sub">Add Meeting</button>
 						<div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
 							Meeting added successfully!
 						</div>
