--- a/Public/meetingV-Manager.html
+++ b/Public/meetingV-Manager.html
@@ -333,7 +333,7 @@
                         meetingItem.classList.add('meeting-item');
                         meetingItem.innerHTML = `
                     <h4>${meeting.MeetingType}</h4><br><br>
-                    <p class="icon-calendar">&nbsp;&nbsp;Date: ${meeting.DateTime}</p><br>
+                    <p class="icon-calendar">&nbsp;&nbsp;Date: ${meeting.Date} at  ${meeting.Time}</p><br>
                     <p class="icon-location">&nbsp;&nbsp;Location: ${meeting.Location}</p><br>
                     <p class="icon-user">&nbsp;&nbsp;Customer Number: ${meeting.CustomerID}</p><br>
                     <p class="icon-home">&nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect}</p><br>
