--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -305,7 +305,7 @@
 							
 								<br><br><br><br><br>
 						</div>
-						<button type="submit" class="btn btn-primary" id="sub">Submit </button>
+						<button type="submit" class="btn btn-primary" id="sub">Add Feedback </button>
            				 <div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
                 			Feedback submitted successfully!
 						</div>
